--- a/面经总结.md
+++ b/面经总结.md
@@ -20,4 +20,12 @@
 - 下游任务：
     - 图片分类：输入一张图片和多个类别text(实验验证加上 a photo of class效果更好)，之后计算这张图片和得到的text向量相似度最大的那个。
     - 图像检索：输入text，然后一直输入image，然后找到和text的相似度超过阈值的。
-# 4.交叉熵的优缺点、L1损失和L2损失的优缺点以及BN的好处
+# 4.交叉熵的优缺点、L1损失和L2损失的优缺点
+- 交叉熵：
+    - 只专注学习正确类的标签，因为其他的概率都是0，计算出来全部都是0。
+    - 当模型效果好的时候，学习的慢，反之学习的快。
+- L1 Loss
+    - 导数是个常量，当损失值很小的时候，梯度仍然比较大，会有很大的震荡。
+- L2 Loss
+    - 有多个离群点的时候，造成的损失很大，会使网络向着这个方向学习。
+# 5.
