--- a/LLMs/多模态.md
+++ b/LLMs/多模态.md
@@ -12,6 +12,9 @@
 ### 2.数据方面
 首先用大量的人工标注数据，去训练模型，得到一个基础模型。
 然后利用互联网上爬取的数据，首先通过ITM判断图文是否匹配，若不匹配，则让模型生成一个新的描述。通过这样操作去构建一个新的大型数据集。用这个数据集去重新训练一个模型。
+### 3.cross-attention
+    这里是用image的hidden states作为k v、用text feature作为q进行attention的计算。
+
 # 3.BLIP2
 ![Alt](assert/blip2.png#pic_center)
 - 设置32维的可学习query，和实际的text文本拼接在一起，然后不同部分采用不同的mask进行后续损失的计算。
