--- a/LLMs/多模态.md
+++ b/LLMs/多模态.md
@@ -31,3 +31,5 @@
 ### 3.VQA-fintune
 ![Alt](assert/blip2-2.png#pic_center)
 query + question一起作为q，和image feature 做cross attention，之后query在和question一起作为LLM的输入，从而得到最后的结果。
+# 4.Qwen2-vl
+![alt](assert/image.png)
